@@ -8,15 +8,20 @@
     <url>http://maven.apache.org</url>
 
     <packaging>pom</packaging>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <scala.version>2.9.1</scala.version>
+        <scala.version>2.10.2</scala.version>
+        <scala.bin.version>2.10</scala.bin.version>
         <liferay.version>6.2.0-GA1</liferay.version>
         <liferay.version6.1>6.1.1</liferay.version6.1>
+        <liferay.version6.1.1>6.1.1</liferay.version6.1.1>
+        <liferay.version6.1.2>6.1.2</liferay.version6.1.2>
         <!-- NOTE: Apparently in Liferay's repo version numbers ARE CASE-SENSITIVE, beware -->
         <liferay.maven.plugin.version>6.2.0-ga1</liferay.maven.plugin.version>
         <portlet-api.version>2.0</portlet-api.version>
         <servlet-api.version>2.5</servlet-api.version>
+        <servlet-api.jsp.version>2.0</servlet-api.jsp.version>
         <slf4j.version>1.6.3</slf4j.version>
         <logback.version>0.9.30</logback.version>
         <spring.framework.version>3.0.5.RELEASE</spring.framework.version>
@@ -25,7 +30,10 @@
         <hibernate-jpa.version>1.0.1.Final</hibernate-jpa.version>
         <jstl.version>1.2</jstl.version>
         <taglib.version>1.1.2</taglib.version>
+        <main.basedir>${project.basedir}</main.basedir>
+        <scalastyle.config.path>${project.basedir}</scalastyle.config.path>
     </properties>
+
     <distributionManagement>
         <site>
             <id>dev-1.arcusys.fi</id>
@@ -57,7 +65,6 @@
         <module>learn-util</module>
         <module>learn-persistence-api</module>
         <module>learn-persistence-api-test</module>
-        <module>learn-persistence</module>
         <module>learn-persistence-liferay620</module>
         <module>learn-persistence-liferay-wrapper</module>
         <module>learn-scorm-package-deployer</module>
@@ -72,39 +79,62 @@
         <module>learn-assembly</module>
         <module>learn-liferay620-hook</module>
         <module>learn-demo-hook</module>
+        <module>learn-web-util</module>
     </modules>
 
     <dependencyManagement>
         <dependencies>
+            <!-- SCALA dependencies -->
             <dependency>
                 <groupId>org.scala-lang</groupId>
                 <artifactId>scala-library</artifactId>
                 <version>${scala.version}</version>
             </dependency>
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.10</version>
+                <groupId>com.escalatesoft.subcut</groupId>
+                <artifactId>subcut_${scala.bin.version}</artifactId>
+                <version>2.0</version>
             </dependency>
             <dependency>
-                <groupId>org.scala-tools.subcut</groupId>
-                <artifactId>subcut_${scala.version}</artifactId>
-                <version>1.0</version>
+                <groupId>org.json4s</groupId>
+                <artifactId>json4s-jackson_${scala.bin.version}</artifactId>
+                <version>3.2.7</version>
+            </dependency>
+            <dependency>
+                <groupId>org.scalatra</groupId>
+                <artifactId>scalatra_${scala.bin.version}</artifactId>
+                <version>2.2.2</version>
             </dependency>
             <dependency>
                 <groupId>org.scalatest</groupId>
-                <artifactId>scalatest_${scala.version}</artifactId>
-                <version>1.7.2</version>
-            </dependency>
-            <dependency>
-                <groupId>org.scalamock</groupId>
-                <artifactId>scalamock-scalatest-support_${scala.version}</artifactId>
-                <version>2.3</version>
+                <artifactId>scalatest_${scala.bin.version}</artifactId>
+                <version>2.0</version>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.specs2</groupId>
-                <artifactId>specs2_${scala.version}</artifactId>
-                <version>1.12.4</version>
+                <artifactId>specs2_${scala.bin.version}</artifactId>
+                <version>2.3.10</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.scalamock</groupId>
+                <artifactId>scalamock-scalatest-support_${scala.bin.version}</artifactId>
+                <version>3.1.RC1</version>
+                <scope>test</scope>
+            </dependency>
+
+            <!-- OTHER dependencies -->
+            <dependency>
+                <groupId>de.schlichtherle.truezip</groupId>
+                <artifactId>truezip-driver-zip</artifactId>
+                <version>7.7.6</version>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.10</version>
             </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
@@ -197,8 +227,53 @@
                 <artifactId>spring-security-config</artifactId>
                 <version>${spring.framework.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>javax.portlet</groupId>
+                <artifactId>portlet-api</artifactId>
+                <version>${portlet-api.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>servlet-api</artifactId>
+                <version>${servlet-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>jsp-api</artifactId>
+                <version>${portlet-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet.jsp</groupId>
+                <artifactId>jsp-api</artifactId>
+                <version>${servlet-api.jsp.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>javax.mail</groupId>
+                <artifactId>mail</artifactId>
+                <version>1.4</version>
+            </dependency>
+
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.3</version>
+            </dependency>
+            <dependency>
+                <groupId>org.joda</groupId>
+                <artifactId>joda-convert</artifactId>
+                <version>1.6</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
     <repositories>
         <repository>
             <id>maven2-repository.dev.java.net</id>
@@ -278,95 +353,115 @@
             <url>https://dev-1.arcusys.fi/mvn/content/repositories/liferay-ee-releases</url>
         </repository>
     </repositories>
+
     <build>
         <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
         <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
+
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <groupId>org.scala-tools</groupId>
-                    <artifactId>maven-scala-plugin</artifactId>
-                    <version>2.15.2</version>
-                    <executions>
-                        <execution>
-                            <id>compile</id>
-                            <goals>
-                                <goal>compile</goal>
-                            </goals>
-                            <phase>compile</phase>
-                        </execution>
-                        <execution>
-                            <id>test-compile</id>
-                            <goals>
-                                <goal>testCompile</goal>
-                            </goals>
-                            <phase>test-compile</phase>
-                        </execution>
-                        <execution>
-                            <phase>process-resources</phase>
-                            <goals>
-                                <goal>compile</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <scalaVersion>${scala.version}</scalaVersion>
-                        <args>
-                            <arg>-target:jvm-1.5</arg>
-                        </args>
-                        <jvmArgs>
-                            <jvmArg>-Xmx1024m</jvmArg>
-                            <jvmArg>-Xmx1024m</jvmArg>
-                        </jvmArgs>
-                    </configuration>
+                    <groupId>net.alchim31.maven</groupId>
+                    <artifactId>scala-maven-plugin</artifactId>
+                    <version>3.1.6</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.jacoco</groupId>
-                    <artifactId>jacoco-maven-plugin</artifactId>
-                    <version>0.5.7.201204190339</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>prepare-agent</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>report</id>
-                            <phase>prepare-package</phase>
-                            <goals>
-                                <goal>report</goal>
-                            </goals>
-                        </execution>
-                    </executions>
+                    <groupId>org.scalariform</groupId>
+                    <artifactId>scalariform-maven-plugin</artifactId>
+                    <version>0.1.4</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.scalastyle</groupId>
+                    <artifactId>scalastyle-maven-plugin</artifactId>
+                    <version>0.4.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.1</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-release-plugin</artifactId>
-                    <version>2.3</version>
+                    <version>2.4.2</version>
                 </plugin>
-                <plugin>
+                <!--<plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <includes>
-                            <include>**/*Spec.java</include>
-                            <include>**/*Test.java</include>
-                        </includes>
-                        <excludes>
-                            <exclude>**/UISuitTest.java</exclude>
-                        </excludes>
-                        <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
-                    </configuration>
+                    <version>2.17</version>
+                </plugin>-->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>2.4</version>
                 </plugin>
                 <plugin>
-                    <artifactId>maven-assembly-plugin</artifactId>
-                    <version>2.2</version>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.4</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>1.7</version>
                 </plugin>
             </plugins>
         </pluginManagement>
+
         <plugins>
             <plugin>
+                <groupId>net.alchim31.maven</groupId>
+                <artifactId>scala-maven-plugin</artifactId>
+                <configuration>
+                    <scalaCompatVersion>2.10</scalaCompatVersion>
+                    <recompileMode>incremental</recompileMode>
+                    <useZincServer>true</useZincServer>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <javacArgs>
+                        <javacArg>-Xlint:unchecked</javacArg>
+                        <javacArg>-Xlint:deprecation</javacArg>
+                    </javacArgs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>scala-compile-first</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>scala-test-compile</id>
+                        <phase>process-test-resources</phase>
+                        <goals>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.scalariform</groupId>
+                <artifactId>scalariform-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>scala-code-formatting</id>
+                        <phase>process-sources</phase>
+                        <goals>
+                            <goal>format</goal>
+                        </goals>
+                        <configuration>
+                            <alignSingleLineCaseStatements>true</alignSingleLineCaseStatements>
+                            <doubleIndentClassDeclaration>true</doubleIndentClassDeclaration>
+                            <preserveDanglingCloseParenthesis>true</preserveDanglingCloseParenthesis>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -375,7 +470,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.2.1</version>
                 <executions>
                     <execution>
                         <id>default</id>
